k8s/deploy.mira.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mira
      rel: dev
  template:
    metadata:
      labels:
        app: mira
        rel: dev
        ver: '0.9.1l'
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      containers:
        - name: mira
          image: mira:0.9.1l
          ports:
          - containerPort: 8000
        - name: nginx
          image: nginx:latest
          ports: 
          - containerPort: 80
          volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
