k8s/deploy.mira.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mira
      rel: dev
  template:
    metadata:
      labels:
        app: mira
        rel: dev
        ver: '0.9.1i'
    spec:
      containers:
        - name: mira
          image: mira:0.9.1i
          ports:
          - containerPort: 8000
