k8s/sts.mira.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mira
spec:
  serviceName: mira
  replicas: 1
  selector:
    matchLabels:
      app: mira
  template:
    metadata:
      labels:
        app: mira
    spec:
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data
      containers:
      - name: mira
        image: mira:0.9.1f
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-data
          mountPath: /code/db
  volumeClaimTemplates:
  - metadata:
      name: db-data
      labels:
        app: mira
    spec:
      resources:
        requests:
          storage: 1Gi
      accessModes:
      - ReadWriteOnce
