k8s/svc.mira.yml
apiVersion: v1
kind: Service
metadata:
  name: mira
spec:
  type: NodePort
  selector:
    app: mira
  ports:
  - name: http
    port: 8000
    targetPort: 8000
