k8s/svc.postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
